--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "php": ">=5.5.9",
         "illuminate/support": ">=5.0",
         "setasign/fpdf": "1.8.*",
-        "setasign/fpdi": "^2.0"
+        "setasign/fpdi": "^2.0",
     },
     "require-dev": {
         "phpunit/phpunit": "4.*",
@@ -54,4 +54,6 @@
             "dev-master": "1.0-dev"
         }
     }
+
+],
 }
